Membuat navbar (blm responsive)

--- a/home-page/index.html
+++ b/home-page/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MYVerse</title>
+    <link rel="icon" href="../image/logo.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,516;1,516&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+
+    <nav>
+        <div class="nav-right">
+            <div class="namawebsite montserrat">
+                <h2>MYVerse</h2>
+            </div>
+        </div>
+        <div class="list montserrat">
+           <h4 class="navlink">
+            <a href="#">Home</a>
+           </h4>
+           <h4 class="navlink">
+            <a href="#">Members</a>
+           </h4>
+           <h4 class="navlink">
+            <a href="#">MVs</a>
+           </h4>
+           <h4 class="navlink">
+            <a href="#">Show</a>
+           </h4>
+        </div>
+    </nav>
+
+    <div class="toggle-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
     <script src="data.js"></script>
 </body>
+
 </html>
